--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "start:dev": "nodemon -e js,hbs,md,json index.js"
   },
   "dependencies": {
-    "forever": "^0.13.0",
-    "handlebars": "^2.0.0",
-    "hapi": "^8.0.0",
-    "markdown": "^0.5.0",
-    "nodemon": "^1.2.1"
+    "forever": "0.13.0",
+    "handlebars": "2.0.0",
+    "hapi": "8.0.0",
+    "markdown": "0.5.0",
+    "nodemon": "1.2.1"
   },
   "engines": {
     "node": "0.10.x"
